--- a/index.html
+++ b/index.html
@@ -32,11 +32,14 @@
                 <img src="GIF/P1.gif" alt="GIF">
                 <span class="grid-text"></span>
             </div>
+            
             <div class="grid-item">
-                <img src="GIF/P3.gif" alt="GIF">
+                <a href="https://www.youtube.com/watch?v=UhAdzxPTSyI" target="_blank">
+                    <img src="GIF/P2.gif" alt="GIF">
+                </a>
             </div>
-            <div class="grid-item"></div>
 
+            <div class="grid-item"></div>
             <div class="title-grid">
                 <span class="grid-item-title">Architecture Generator</span>
             </div>
