--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
         <nav class="header-right">
             <a href="#work">Work</a>
-            <a href="#about">About</a>
+            <a href="about.html">About</a>
             <a href="#contact">Contact</a>
         </nav>
     </header>
@@ -44,7 +44,7 @@
                 <span class="grid-item-title">Architecture Generator</span>
             </div>
             <div class="title-grid">
-                <span class="grid-item-title">Collective Dreamscape</span>
+                <span class="grid-item-title">Dreamscape Animation</span>
             </div>
             <div class="title-grid">
                 <span class="grid-item-title">Digital Twin</span>
@@ -85,7 +85,7 @@
     <footer>
         <nav>
             <a href="#work">Work</a>
-            <a href="#about">About</a>
+            <a href="about.html">About</a>
             <a href="#contact">Contact</a>
         </nav>
     </footer>
