--- a/about.html
+++ b/about.html
@@ -12,8 +12,7 @@
     </header>
     <main>
         <section class="about-section">
-            <a href="<a href="https://liuhanyuer.github.io/Portfolio/PDF/Hanyu%20Liu_AI%2BDesign.pdf" target="_blank">Resume</a>
-            " target="_blank">Resume</a>
+            <a href="PDF/Hanyu_Liu_AI_Design.pdf" target="_blank">Resume</a>
             <a href="projects.html">Projects</a>
             <a href="architecture-portfolio.html">Architecture Portfolio</a>
         </section>
