--- a/HL.html
+++ b/HL.html
@@ -32,19 +32,15 @@
           <a href="contact.html">Contact</a>
         </nav>
       </header>
-    <!-- ...previous html code... -->
-
-<div class="title-container">
-    <div class="title" data-gif="gif-1"><span class="title-number">01</span> Voxel to Volume</div>
-    <div class="title" data-gif="gif-2"><span class="title-number">02</span> Word to Mapping</div>
-    <div class="title" data-gif="gif-3"><span class="title-number">03</span> Text to Film</div>
-    <div class="title" data-gif="gif-4"><span class="title-number">04</span> Algorithm to Structure</div>
-    <div class="title" data-gif="gif-5"><span class="title-number">05</span> Feeling to Space</div>
-    <div class="title" data-gif="gif-6"><span class="title-number">06</span> Eating to Sustainability</div>
-  </div>
-  
-  <!-- ...remaining html code... -->
-  
+      <div class="title-container">
+        <div class="title" data-gif="gif-1"><span class="title-number">01</span> Voxel to Volume</div>
+        <div class="title" data-gif="gif-2"><span class="title-number">02</span> Word to Mapping</div>
+        <div class="title" data-gif="gif-3"><span class="title-number">03</span> Text to Film</div>
+        <div class="title" data-gif="gif-4"><span class="title-number">04</span> Algorithm to Structure</div>
+        <div class="title" data-gif="gif-5"><span class="title-number">05</span> Feeling to Space</div>
+        <div class="title" data-gif="gif-6"><span class="title-number">06</span> Eating to Sustainability</div>
+        <div class="title-line"></div> <!-- Add the title-line div here -->
+      </div>
     </div>
   </div>
   <script src="app.js"></script>
