--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About | Hanyu Liu</title>
-    <link rel="stylesheet" href="about.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
@@ -12,7 +12,7 @@
     </header>
     <main>
         <section class="about-section">
-            <a href="PDF/Hanyu_Liu_AI_Design.pdf" target="_blank">Resume</a>
+            <a href="PDF/Hanyu_Liu_Resume.pdf" target="_blank">Resume</a>
             <a href="projects.html">Projects</a>
             <a href="architecture-portfolio.html">Architecture Portfolio</a>
         </section>
